# predmarket-alpha

./: .dockerignore  .env.template  .gitattributes  .gitignore  .gitleaks.toml  .jscpd.json  .large-file-baseline.json  .pre-commit-config.yaml  .ruff-baseline.json  .tech-debt-baseline.json  AGENTS.md  COMPLETION_REPORT_2026-07-02_AGENT_READINESS_VERIFICATION.md  COMPLETION_REPORT_2026-07-03_FAMILY_AWARE_ORCHESTRATION_FULFILLED.md  COMPLETION_REPORT_2026-07-03_KALSHI_SPORTS_FEATURE_PACKET_FULFILLED.md  COMPLETION_REPORT_2026-07-03_SPORTS_CCD_CLUSTER_DECAY_E2E_FULFILLED.md  COMPLETION_REPORT_2026-07-03_STRANGLER_FIG_MIGRATION_COMPLETE_FULFILLED.md  COMPLETION_REPORT_2026-07-03_WEATHER_FAMILY_VIA_ENGINE_FULFILLED.md  Claude_Sonnet_5_Repo_Advice_7.3.26.md  Dockerfile  Gemini_3.5_Flash_Repo_Audit_and_Remediation.md  Makefile  README.md  REMEDIATION_2026-06-10_COMPLETE.md  REMEDIATION_2026-06-10_step1_git_init.md  Remediation_Verification_and_Cleanup_Summary.md  alembic.ini  dev-requirements.txt  kalshi_ev_discovery_plan.md  main.py  pyproject.toml  renovate.json  requirements.txt  rigorous_codebase_audit.md  run_smoke_test.sh  setup_env.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  droid-review.yml  error-triage.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_opportunities.py
assets/: custom.css
config/: config.yaml
data/: kalshi_edge_report_2026-06-16.md  kalshi_mlb_game_series_live_current_20260620T230203Z.json  kalshi_run_log_2026-06-16.txt  kalshi_scored_2026-06-16.json  kalshi_scored_refined_2026-06-16.json
docs/: MONITORING.md  kalshi_edge_strategy.md  kalshi_research_desk.md  openapi.json
docs/architecture/: kalshi-signal-factory.md
predmarket/: __init__.py  aggregator.py  arbitrage.py  audit.py  backtester.py  baselines.py  bayesian.py  calibration.py  config.py  connectors.py  contracts.py  crypto_family.py  dashboard.py  density.py  diffusion.py  elections.py  engine.py  ensemble.py  events.py  execution.py  experiments.py  external_artifact_bridge.py  external_artifact_wrappers.py  favorite_longshot_bias_family.py  feature_flags.py  features.py  forecasting_pipeline.py  horizons.py  ingest.py  judgment.py  kalshi_dataset.py  kalshi_discovery.py  kalshi_execution_cost.py  kalshi_jurisdiction.py  kalshi_live_artifacts.py  kalshi_live_client.py  kalshi_live_engine.py  kalshi_live_rank.py  kalshi_manual_drop_capture.py  kalshi_paper_ledger.py  (+51 more)
scripts/: check_feature_flags.py  check_file_sizes.py  codex_macro_blocker_audit.py  codex_macro_router.py  codex_macro_unlock_scout.py  collect_quality_metrics.py  kalshi_always_on_collector.py  kalshi_atp_proxy_evidence_gate.py  kalshi_atp_proxy_observation_loop.py  kalshi_claude_advice_audit.py  kalshi_contract_ev_ledger.py  kalshi_crypto_proxy_capacity_correlation_decay.py  kalshi_crypto_proxy_correlation_cluster_control.py  kalshi_crypto_proxy_feature_model_falsification.py  kalshi_crypto_proxy_feature_packet.py  kalshi_crypto_proxy_observation_loop.py  kalshi_crypto_proxy_research_candidate_replay.py  kalshi_ev_local_contract_evidence_scout.py  kalshi_ev_nfl_overlay_assembler.py  kalshi_ev_queue_robustness.py  kalshi_ev_review_queue.py  kalshi_external_artifact_preflight.py  kalshi_external_artifact_wrap.py  kalshi_falsification_replay_shared.py  kalshi_ghost_listing_depth_diagnostic.py  kalshi_hypothesis_registry.py  kalshi_labeled_observation_builder.py  kalshi_labeled_oos_backtest.py  kalshi_live_common.py  kalshi_live_preflight.py  kalshi_live_reconcile.py  kalshi_live_risk_snapshot.py  kalshi_live_trader.py  kalshi_near_resolution_flow_replay_gates.py  kalshi_near_resolution_flow_terms_capture.py  kalshi_near_resolution_informed_flow_evidence_gate.py  kalshi_paper_decision_candidates.py  kalshi_paper_settlement_reconcile.py  kalshi_passive_liquidity_fill_clock_diagnostic.py  kalshi_passive_liquidity_paper_fill_falsification.py  (+61 more)
tests/: conftest.py  test_audit.py  test_auth_consolidation.py  test_codex_macro_blocker_audit.py  test_codex_macro_router.py  test_codex_macro_unlock_scout.py  test_config.py  test_dashboard.py  test_discovery.py  test_engine_invariance.py  test_ensemble.py  test_execution.py  test_favorite_longshot_bias_family.py  test_ghost_listing_capacity_integration.py  test_ingest.py  test_kalshi_always_on_collector.py  test_kalshi_atp_proxy_evidence_gate.py  test_kalshi_atp_proxy_observation_loop.py  test_kalshi_claude_advice_audit.py  test_kalshi_contract_ev_ledger.py  test_kalshi_crypto_proxy_capacity_correlation_decay.py  test_kalshi_crypto_proxy_correlation_cluster_control.py  test_kalshi_crypto_proxy_feature_model_falsification.py  test_kalshi_crypto_proxy_feature_packet.py  test_kalshi_crypto_proxy_observation_loop.py  test_kalshi_crypto_proxy_research_candidate_replay.py  test_kalshi_dataset.py  test_kalshi_discovery.py  test_kalshi_ev_local_contract_evidence_scout.py  test_kalshi_ev_nfl_overlay_assembler.py  test_kalshi_ev_queue_robustness.py  test_kalshi_ev_review_queue.py  test_kalshi_execution_cost.py  test_kalshi_ghost_listing_depth_diagnostic.py  test_kalshi_hypothesis_registry.py  test_kalshi_jurisdiction.py  test_kalshi_labeled_observation_builder.py  test_kalshi_labeled_oos_backtest.py  test_kalshi_live_client.py  test_kalshi_live_engine.py  (+79 more)
(+348 files in other folders)
